@@ -45,7 +45,7 @@ IO::Interactive           = 0.0.6
 ; Command.pm
 Getopt::Long::Descriptive = 0.083
 Dir::Self                 = 0.10
-Term::Sk                  = 0.04
+Term::Sk                  = 0.06
 
 ; ReadLine.pm
 Term::ReadLine            = 0
